--- a/projects.qmd
+++ b/projects.qmd
@@ -1,4 +1,10 @@
 ---
-title: "resources"
-editor: visual
+title: "Projects"
+listing:
+  contents: projects
+  sort: "date desc"
+  type: grid
+page-layout: full
+title-block-banner: true
+comments: false
 ---
