--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,7 @@ about:
 
 Hi, I'm Alec, a data science major at Macalester College. I'm passionate about using data to solve real-world problems and make a positive impact on the world.
 
-My particular interests are in chemistry and healthcare, where I believe data-driven insights can lead to more accurate and effective predictions of [reaction predictions](https://pubs.acs.org/doi/full/10.1021/bk-2019-1326.ch004), [RNA structures](https://www.youtube.com/@CASP-Prediction-Center), and to the identification and elimination of disparities in healthcare access and outcomes.
+My particular interests are in chemistry and healthcare, where I believe data-driven insights can lead to more accurate and effective predictions of chemical reactions, RNA structures, and to the elimination of disparities in healthcare access and outcomes.
 
 I'm also a big fan of swimming, playing pool, listening to podcasts, and reading. I'm always looking for new challenges and opportunities to learn and grow.
 
